--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -280,10 +280,10 @@
             background-color: rgb(255, 255, 255); 
         }
         .silex-id-1488680184769-2 {
-            width: 475px; 
+            width: 835px; 
             top: 70px; 
             left: 46px; 
-            min-height: 247px; 
+            min-height: 311px; 
         }
         .silex-id-1488680184800-3 {
             width: 978px; 
@@ -715,7 +715,20 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal"><span>&nbsp; &nbsp; Guest: Patricia Rizzo, Philips Lighting Research North America, Applications Team</span></p>
+                        <p class="normal"><span>&nbsp; &nbsp; Sketch Lab by Akshay Sharma, in class - basic skills of sketch and tools are introduced. Tutorial of an example for a sketching tool, FUSION 360. How to sketch perspective view by hand sketching, and so on.</span></p>
+                        <p
+                        class="normal"><span><br></span></p>
+                            <p class="normal"><span><span>&nbsp; &nbsp; Second session is a guest presentation by Axel Schmid in Ingo&nbsp;Maurer.&nbsp;</span></span>
+                            </p>
+                            <p class="normal"><span><span><br></span></span>
+                            </p>
+                            <p class="normal"><span><span><span>&nbsp; &nbsp; Assignment review - I defined a space of meeting&nbsp;room for lighting design and took photos Burlington office meeting room and Cambridge meeting room. My design project will be focused on &nbsp;</span>&nbsp;</span>
+                                </span>
+                            </p>
+                            <p class="normal"><span><span>&nbsp;&nbsp; &nbsp;</span>
+                                <br>
+                                </span>
+                            </p>
                     </div>
                 </div>
             </div>
