--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -368,11 +368,11 @@
             min-height: 247px; 
         }
         .silex-id-1487540108762-2 {
-            top: 2319px; 
+            top: 1114px; 
             left: 0px; 
         }
         .silex-id-1487540108761-1 {
-            min-height: 826px; 
+            min-height: 897px; 
             background-color: rgb(255, 255, 255); 
         }
         .silex-id-1487706011679-1 {
@@ -444,6 +444,8 @@
             min-width: 1280px;
           }
     </style>
+
+
 
 
 
@@ -715,20 +717,12 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal"><span>&nbsp; &nbsp; Sketch Lab by Akshay Sharma, in class - basic skills of sketch and tools are introduced. Tutorial of an example for a sketching tool, FUSION 360. How to sketch perspective view by hand sketching, and so on.</span></p>
-                        <p
-                        class="normal"><span><br></span></p>
-                            <p class="normal"><span><span>&nbsp; &nbsp; Second session is a guest presentation by Axel Schmid in Ingo&nbsp;Maurer.&nbsp;</span></span>
-                            </p>
-                            <p class="normal"><span><span><br></span></span>
-                            </p>
-                            <p class="normal"><span><span><span>&nbsp; &nbsp; Assignment review - I defined a space of meeting&nbsp;room for lighting design and took photos Burlington office meeting room and Cambridge meeting room. My design project will be focused on &nbsp;</span>&nbsp;</span>
-                                </span>
-                            </p>
-                            <p class="normal"><span><span>&nbsp;&nbsp; &nbsp;</span>
-                                <br>
-                                </span>
-                            </p>
+                        <p class="normal">&nbsp; &nbsp; Sketch Lab in class by <b>Akshay Sharma</b> who taught students in Virginia Tech -&nbsp;Look at 'form' in isolation to figure out transformation. He explained about sketching&nbsp;axis and flow, rotation of form,
+                            successful sculpture beautifully designed. He also introduced sketch tools of AutoDesk's SketchBook Pro and <a href="http://www.autodesk.com/products/fusion-360/overview"><b>FUSION 360</b></a> that is able to generate form
+                            quickly. Concept generation for product design and design visualization can be delivered by using the tools. A simple tutorial and rendering capabilities of FUSION 360 were also introduced. Another big time in class is his
+                            hand sketching&nbsp;techniques -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html"><b>Axel Schmid</b></a>                            in&nbsp;<a href="https://www.ingo-maurer.com/en/">Ingo Maurer</a> offered presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
+                        <p class="normal">
+                        </p>
                     </div>
                 </div>
             </div>
@@ -1058,6 +1052,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
