--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -722,6 +722,11 @@
                             quickly. Concept generation for product design and design visualization can be delivered by using the tools. A simple tutorial and rendering capabilities of FUSION 360 were also introduced. Another big time in class is his
                             hand sketching&nbsp;techniques -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html"><b>Axel Schmid</b></a>                            in&nbsp;<a href="https://www.ingo-maurer.com/en/">Ingo Maurer</a> offered presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
                         <p class="normal">
+                            <br>
+                        </p>
+                        <p class="normal">&nbsp; &nbsp; This week's assignment - Develop 5 concepts for a novel strategy of system of "light". Convey each through multiple sketches, and give the context/problem that this addresses. Explain where it is/why people need/want
+                            this, why its novel, how it relates to others in the field</p>
+                        <p class="normal">
                         </p>
                     </div>
                 </div>
