--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -717,10 +717,12 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal">&nbsp; &nbsp; Sketch Lab in class by <b>Akshay Sharma</b> who taught students in Virginia Tech -&nbsp;Look at 'form' in isolation to figure out transformation. He explained about sketching&nbsp;axis and flow, rotation of form,
-                            successful sculpture beautifully designed. He also introduced sketch tools of AutoDesk's SketchBook Pro and <a href="http://www.autodesk.com/products/fusion-360/overview"><b>FUSION 360</b></a> that is able to generate form
-                            quickly. Concept generation for product design and design visualization can be delivered by using the tools. A simple tutorial and rendering capabilities of FUSION 360 were also introduced. Another big time in class is his
-                            hand sketching&nbsp;techniques -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html"><b>Axel Schmid</b></a>                            in&nbsp;<a href="https://www.ingo-maurer.com/en/">Ingo Maurer</a> offered presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
+                        <p class="normal">&nbsp; &nbsp; Sketch Lab in class with&nbsp;<b>Akshay Sharma,</b> who taught students in Virginia Tech -&nbsp;Look at 'form' in isolation to figure out transformation. He talked about sketching&nbsp;axis and flow, rotation of form,
+                            beautifully designed sculptures . He also introduced sketch tools in AutoDesk's SketchBook Pro and <a href="http://www.autodesk.com/products/fusion-360/overview"><b>FUSION 360</b></a> that are able to generate form quickly.
+                            Concept generation for product design and design visualization can be delivered by using the tools. A simple tutorial and rendering capabilities of FUSION 360 were also introduced. Another emphasis in class was his hand sketching&nbsp;techniques
+                            -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html"><b>Axel Schmid</b></a>&nbsp;from&nbsp;
+                            <a
+                            href="https://www.ingo-maurer.com/en/">Ingo Maurer</a> offered a presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
                         <p class="normal">
                             <br>
                         </p>
