--- a/index.html
+++ b/index.html
@@ -718,11 +718,11 @@
                     </div>
                     <div>
                         <p class="normal">&nbsp; &nbsp; Sketch Lab in class with&nbsp;<b>Akshay Sharma,</b> who taught students in Virginia Tech -&nbsp;Look at 'form' in isolation to figure out transformation. He talked about sketching&nbsp;axis and flow, rotation of form,
-                            beautifully designed sculptures . He also introduced sketch tools in AutoDesk's SketchBook Pro and <a href="http://www.autodesk.com/products/fusion-360/overview"><b>FUSION 360</b></a> that are able to generate form quickly.
+                            beautifully designed sculptures . He also introduced sketch tools in AutoDesk's SketchBook Pro and <a href="http://www.autodesk.com/products/fusion-360/overview" target="_blank"><b>FUSION 360</b></a> that are able to generate form quickly.
                             Concept generation for product design and design visualization can be delivered by using the tools. A simple tutorial and rendering capabilities of FUSION 360 were also introduced. Another emphasis in class was his hand sketching&nbsp;techniques
-                            -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html"><b>Axel Schmid</b></a>&nbsp;from&nbsp;
+                            -&nbsp;chicken&nbsp;scratch, drawing lines for&nbsp;plane of perspective and add thickness, volumes for constructing anything.&nbsp;Followed by students' assignment review with staff, <a href="http://www.axelschmid.com/1-0-home.html" target="_blank"><b>Axel Schmid</b></a>&nbsp;from&nbsp;
                             <a
-                            href="https://www.ingo-maurer.com/en/">Ingo Maurer</a> offered a presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
+                            href="https://www.ingo-maurer.com/en/" target="_blank">Ingo Maurer</a> offered a presentation via Skype, working on lighting fixture design and producing. &nbsp;&nbsp;</p>
                         <p class="normal">
                             <br>
                         </p>
