--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -635,7 +635,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912004397-6" data-silex-id="silex-id-1487912004397-6" style="">
-                <div class="silex-element-content normal">Week 3:
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week3_sketch.html" target="_blank">Week 3:</a>
 
                     <div><font size="2">Concepts+Idea Generation</font></div>
                 </div>
