--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -682,6 +682,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -776,11 +778,11 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912052846-7" data-silex-id="silex-id-1487912052846-7" style="">
-                <div class="silex-element-content normal"><span style="background-color: rgb(255, 255, 255);"><font color="#999999">Week 4:
+                <div class="silex-element-content normal"><span style="background-color: rgb(255, 255, 255);">Week 4:
                     
-                    </font></span>
+                    </span>
                     <div>
-                        <font style="background-color: rgb(255, 255, 255);" size="2" color="#999999">Design Process/Tools</font>
+                        <font style="background-color: rgb(255, 255, 255);" size="2">Design Process/Tools</font>
                     </div>
                 </div>
             </div>
@@ -1243,6 +1245,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
