--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -915,7 +915,14 @@
                     </div>
                     <div>
                         <p class="normal">&nbsp; &nbsp; Guest speaker: Maria C. Yang, MIT Mechanical Dept, Director of Ideation Lab <br></p>
-                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>She presented how to process concept development from ideas that is early phase for design cycle. <br></p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>She presented how to process concept development from ideas that is early phase for design cycle. Multiple steps in creative process - preparation, incubation, illumination and verification. Metrics
+                            foo creativity are listed below.&nbsp;</p>
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Fluency, quantity of ideas</p>
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Flexibility, range of ideas</p>
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Originality, novelty</p>
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Quality, feasibility</p>
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- General consensus</p>
+                        <p class="normal"><br></p>
                         <p class="normal">
                             <br>
                         </p>
