--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -339,7 +339,7 @@
         }
         
         .silex-id-1489077184289-0 {
-            min-height: 751px;
+            min-height: 678px;
             background-color: rgb(255, 255, 255);
         }
         
@@ -915,19 +915,22 @@
                     </div>
                     <div>
                         <p class="normal">&nbsp; &nbsp; Guest speaker: Maria C. Yang, MIT Mechanical Dept, Director of Ideation Lab <br></p>
-                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>She presented how to process concept development from ideas that is early phase for design cycle. Multiple steps in creative process - preparation, incubation, illumination and verification. Metrics
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><br></p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; Maria </span>presented how to process concept development from ideas that is early phase for design cycle. Multiple steps in creative process - preparation, incubation, illumination and verification. Metrics
                             foo creativity are listed below.&nbsp;</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Fluency, quantity of ideas</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Flexibility, range of ideas</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Originality, novelty</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Quality, feasibility</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- General consensus</p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Brainstorming is one of methods for group or individual ideation to find a solution for a specific problem. You will like TheDesignExchange design community portal that could be one of great sources
+                            to learn and improve your design skills. You can find design process and methods from TheDesignExchange, i.e. Rules of Brainstorming. Here is the link for the brainstorming method, tools and resources to check them out, https://www.thedesignexchange.org/design_methods/111.
+                            <br></p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>We had a 20 minute exercise for brainstorming using the method. 3 or 4 students were grouped and brainstorming for "Food in the future", what will people eat 20 years from now? At least 10 ideas
+                            generation for 15 minutes and shared their favorite answer.</p>
                         <p class="normal"><br></p>
-                        <p class="normal">
-                            <br>
-                        </p>
-                        <p class="normal">&nbsp; &nbsp; This week's assignment - Develop 5 concepts for a novel strategy of system of "light". Convey each through multiple sketches, and give the context/problem that this addresses. Explain where it is/why people need/want
-                            this, why its novel, how it relates to others in the field</p>
+                        <p class="normal">&nbsp; &nbsp; This week's assignment - Represent 1 idea in 3 different media, i.e. sketch, digital model, physical model, to learn how to work in various media at various scales with an eye towards furthering your design/concept.
+                            </p>
                         <p class="normal">
                         </p>
                     </div>
