--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -339,7 +339,7 @@
         }
         
         .silex-id-1489077184289-0 {
-            min-height: 678px;
+            min-height: 640px;
             background-color: rgb(255, 255, 255);
         }
         
@@ -712,6 +712,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -926,7 +928,7 @@
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Quality, feasibility</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- General consensus</p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Brainstorming is one of the methods for group or individual ideation to find a solution for a specific problem. You will like TheDesignExchange design community portal; it is a great source to learn
-                            and improve your design skills. You can find design processes and methods from TheDesignExchange, i.e. Rules of Brainstorming. Here is the link for the brainstorming method, tools and resources: https://www.thedesignexchange.org/design_methods/111.
+                            and improve your design skills. You can find design processes and methods from TheDesignExchange, i.e. Rules of Brainstorming. Here is the link for the brainstorming method, tools and resources: <a href="https://www.thedesignexchange.org/design_methods/111">https://www.thedesignexchange.org/design_methods/111</a>.
                             <br></p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>We had a 20 minute brainstorming exercise using the method. 3 or 4 students were grouped and brainstormed for "Food in the future"; what will people eat 20 years from now? At least 10 ideas were
                             generated in 15 minutes and shared.</p>
@@ -1318,6 +1320,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
