--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -339,7 +339,7 @@
         }
         
         .silex-id-1489077184289-0 {
-            min-height: 640px;
+            min-height: 678px;
             background-color: rgb(255, 255, 255);
         }
         
@@ -714,6 +714,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -818,45 +820,45 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680321551-4" data-silex-id="silex-id-1488680321551-4" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 5:</font>
+                    Week 5:
                     <div>
-                        <font size="2" color="#999999">Iteration vs. Evolution</font>
+                        <font size="2">Iteration vs. Evolution</font>
                     </div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680333165-5" data-silex-id="silex-id-1488680333165-5" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 6:
-                    </font>
+                    Week 6:
+
                     <div>
-                        <font size="2" color="#999999">Constraints</font>
+                        <font size="2">Constraints</font>
                     </div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680337779-6" data-silex-id="silex-id-1488680337779-6" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 7:
-                    </font>
+                    Week 7:
+
                     <div>
-                        <font size="2" color="#999999">Break</font>
+                        <font size="2">Break</font>
                     </div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680341749-7" data-silex-id="silex-id-1488680341749-7" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 8:
-                    </font>
+                    Week 8:
+
                     <div>
-                        <font size="2" color="#999999">Failure</font>
+                        <font size="2">Failure</font>
                     </div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680345617-8" data-silex-id="silex-id-1488680345617-8" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 9:
-                    </font>
+                    Week 9:
+
                     <div>
-                        <font size="2" color="#999999">Collaboration</font>
+                        <font size="2">Collaboration</font>
                     </div>
                 </div>
             </div>
@@ -928,7 +930,8 @@
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- Quality, feasibility</p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp; &nbsp;</span><span>&nbsp;&nbsp;&nbsp; </span>- General consensus</p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Brainstorming is one of the methods for group or individual ideation to find a solution for a specific problem. You will like TheDesignExchange design community portal; it is a great source to learn
-                            and improve your design skills. You can find design processes and methods from TheDesignExchange, i.e. Rules of Brainstorming. Here is the link for the brainstorming method, tools and resources: <a href="https://www.thedesignexchange.org/design_methods/111" target="_blank">https://www.thedesignexchange.org/design_methods/111</a>.
+                            and improve your design skills. You can find design processes and methods from TheDesignExchange, i.e. Rules of Brainstorming. Here is the link for the brainstorming method, tools and resources: <a href="https://www.thedesignexchange.org/design_methods/111"
+                                target="_blank">https://www.thedesignexchange.org/design_methods/111</a>.
                             <br></p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>We had a 20 minute brainstorming exercise using the method. 3 or 4 students were grouped and brainstormed for "Food in the future"; what will people eat 20 years from now? At least 10 ideas were
                             generated in 15 minutes and shared.</p>
@@ -1320,6 +1323,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
