--- a/week9_midterm.html
+++ b/week9_midterm.html
@@ -21,16 +21,23 @@
             background-color: rgba(0, 0, 0, 1);
         }
         
-        .silex-id-1492008249347-6 {
-            min-height: 675px;
-            width: 1126px;
-            top: 27px;
-            left: 224px;
+        .silex-id-1492008633865-7 {
+            min-height: 750px;
+            width: 1000px;
+            top: 864px;
+            left: 303px;
+        }
+        
+        .silex-id-1492008732205-8 {
+            min-height: 750px;
+            width: 1000px;
+            top: 37px;
+            left: 278px;
         }
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(0,0,0,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1492008249347-6":{"min-height":"570px","width":"953px","top":"27px","left":"224px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(0,0,0,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1492008633865-7":{"min-height":"750px","width":"1000px","top":"864px","left":"303px"},"silex-id-1492008732205-8":{"min-height":"750px","width":"1000px","top":"38px","left":"281px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -71,7 +78,8 @@
 
 
 
-    <div data-silex-type="image" class="editable-style silex-id-1492008249347-6 image-element" data-silex-id="silex-id-1492008249347-6" style=""><img src="Photos/week3_sketch/Slide4_webload.jpg" class="silex-element-content"></div>
+    <div data-silex-type="image" class="editable-style silex-id-1492008633865-7 image-element" data-silex-id="silex-id-1492008633865-7" style=""><img src="Photos/4_12_MidTerm/pic1.jpg" class="silex-element-content"></div>
+    <div data-silex-type="image" class="editable-style silex-id-1492008732205-8 image-element" data-silex-id="silex-id-1492008732205-8" style=""><img src="Photos/week3_sketch/Slide4_webload.jpg" class="silex-element-content"></div>
 </body>
 
 </html>
