--- a/week9_midterm.html
+++ b/week9_midterm.html
@@ -111,10 +111,17 @@
             top: 3174px;
             left: 669px;
         }
+        
+        .silex-id-1492010636084-22 {
+            min-height: 787px;
+            width: 1050px;
+            top: 3740px;
+            left: 135px;
+        }
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(0,0,0,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1492008732205-8":{"min-height":"750px","width":"1000px","top":"10px","left":"250px"},"silex-id-1492009771274-10":{"min-height":"375px","width":"500px","top":"1960px","left":"137px"},"silex-id-1492009805101-11":{"min-height":"375px","width":"500px","top":"2367px","left":"137px"},"silex-id-1492009858918-12":{"min-height":"375px","width":"500px","top":"2361px","left":"676px"},"silex-id-1492009876841-13":{"min-height":"375px","width":"500px","top":"1960px","left":"664px"},"silex-id-1492009892706-14":{"min-height":"375px","width":"500px","top":"2767px","left":"128px"},"silex-id-1492009905316-15":{"min-height":"375px","width":"500px","top":"2768px","left":"675px"},"silex-id-1492009995823-16":{"min-height":"527px","width":"811px","top":"3174px","left":"669px"},"silex-id-1492010038182-17":{"min-height":"350px","width":"500px","top":"967px","left":"277px"},"silex-id-1492010055415-18":{"min-height":"194px","width":"402px","top":"1014px","left":"841px"},"silex-id-1492010066936-19":{"min-height":"503px","width":"700px","top":"1340px","left":"99px"},"silex-id-1492010088482-20":{"min-height":"492px","width":"529px","top":"3175px","left":"125px"},"silex-id-1492010143474-21":{"min-height":"560px","width":"671px","top":"1250px","left":"822px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(0,0,0,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1492008732205-8":{"min-height":"750px","width":"1000px","top":"10px","left":"250px"},"silex-id-1492009771274-10":{"min-height":"375px","width":"500px","top":"1960px","left":"137px"},"silex-id-1492009805101-11":{"min-height":"375px","width":"500px","top":"2367px","left":"137px"},"silex-id-1492009858918-12":{"min-height":"375px","width":"500px","top":"2361px","left":"676px"},"silex-id-1492009876841-13":{"min-height":"375px","width":"500px","top":"1960px","left":"664px"},"silex-id-1492009892706-14":{"min-height":"375px","width":"500px","top":"2767px","left":"128px"},"silex-id-1492009905316-15":{"min-height":"375px","width":"500px","top":"2768px","left":"675px"},"silex-id-1492009995823-16":{"min-height":"495px","width":"812px","top":"3174px","left":"669px"},"silex-id-1492010038182-17":{"min-height":"350px","width":"500px","top":"967px","left":"277px"},"silex-id-1492010055415-18":{"min-height":"194px","width":"402px","top":"1014px","left":"841px"},"silex-id-1492010066936-19":{"min-height":"503px","width":"700px","top":"1340px","left":"99px"},"silex-id-1492010088482-20":{"min-height":"492px","width":"529px","top":"3175px","left":"125px"},"silex-id-1492010143474-21":{"min-height":"560px","width":"671px","top":"1250px","left":"822px"},"silex-id-1492010636084-22":{"min-height":"787px","width":"1050px","top":"3507px","left":"163px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -180,6 +187,7 @@
     <div data-silex-type="image" class="editable-style silex-id-1492009905316-15 image-element" data-silex-id="silex-id-1492009905316-15" style=""><img src="Photos/4_12_MidTerm/pic6.jpg" class="silex-element-content"></div>
     <div data-silex-type="image" class="editable-style silex-id-1492010088482-20 image-element" data-silex-id="silex-id-1492010088482-20" style=""><img src="Photos/4_12_MidTerm/full%20assy.jpg" class="silex-element-content"></div>
     <div data-silex-type="image" class="editable-style silex-id-1492009995823-16 image-element" data-silex-id="silex-id-1492009995823-16" style=""><img src="Photos/4_12_MidTerm/preview_webload.jpg" class="silex-element-content"></div>
+    <div data-silex-type="image" class="editable-style silex-id-1492010636084-22 image-element" data-silex-id="silex-id-1492010636084-22" style=""><img src="Photos/4_12_MidTerm/OneSlide_midterm%20pt%20concept_20170412_v2_webload.jpg" class="silex-element-content"></div>
 </body>
 
 </html>
