--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -716,6 +716,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -855,8 +857,7 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680345617-8" data-silex-id="silex-id-1488680345617-8" style="">
                 <div class="silex-element-content normal">
-                    Week 9:
-
+                    <span id="goog_2032582943"></span><a href="https://jehkim.github.io/howtodesign/week9_midterm.html">Week 9:                    </a>
                     <div>
                         <font size="2">Collaboration</font>
                     </div>
@@ -1323,6 +1324,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
