--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -857,7 +857,7 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680345617-8" data-silex-id="silex-id-1488680345617-8" style="">
                 <div class="silex-element-content normal">
-                    <span id="goog_2032582943"></span><a href="https://jehkim.github.io/howtodesign/week9_midterm.html">Week 9:                    </a>
+                    <span id="goog_2032582943"></span><a href="https://jehkim.github.io/howtodesign/week9_midterm.html" target="_blank">Week 9:                    </a>
                     <div>
                         <font size="2">Collaboration</font>
                     </div>
