--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1482,7 +1482,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1487542794041-13" data-silex-id="silex-id-1487542794041-13" style="">
                 <div class="silex-element-content normal">
                     <h1 class="heading1">
-                        <font size="6">Freedom of Design for Function</font>
+                        <font size="6">Week 1: Freedom of Design for Function</font>
                     </h1>
                     <div>
                         <br>
@@ -1547,7 +1547,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1487705982788-0" data-silex-id="silex-id-1487705982788-0" style="">
                 <div class="silex-element-content normal">
                     <h1 class="heading1">
-                        <font size="6">Introduction</font>
+                        <font size="6">Week 0: Introduction</font>
                     </h1>
                     <div>
                         <br>
