--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -999,10 +999,10 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680357240-9" data-silex-id="silex-id-1488680357240-9" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 10:
-                    </font>
+                    Week 10:
+
                     <div>
-                        <font size="2" color="#999999">Stories/Narrative</font>
+                        <font size="2">Stories/Narrative</font>
                     </div>
                 </div>
             </div>
