--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1061,7 +1061,9 @@
                     </div>
                     <div>
                         <p class="normal">&nbsp; &nbsp; Guest speaker:<b> Saeed Arida</b>, NuVu, <a href="https://cambridge.nuvustudio.com/">cambridge.nuvustudio.com</a></p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Title: More seeing in learning (Design Education)</p>
                         <p class="normal"><br></p>
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>He focused on explaining how a designer is thinking and design process during the class. Transforming process using an example of three triangles and <a href="https://cambridge.nuvustudio.com/studios/falofal-cart#tab-feed-url">O'Falafel cart</a>                            were introduced to explain how the creative process is happening. <br></p><br>
                         <p class="normal"><br></p><br><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
 &quot;Malgun Gothic&quot;;mso-fareast-theme-font:minor-fareast;color:black;mso-ansi-language:
 EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span>
