--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1164,7 +1164,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span>
                 </div>
             </div>
             <div data-silex-type="image" class="editable-style silex-id-1492528634068-17 image-element" data-silex-id="silex-id-1492528634068-17" style=""><img src="Photos/4_5_Failure/20170405_183732997_iOS.jpg" class="silex-element-content"></div>
-            <div data-silex-type="image" class="editable-style silex-id-1492534961873-21 image-element" data-silex-id="silex-id-1492534961873-21" style=""><a href="https://vimeo.com/103471334" target="_blank"><img src="Photos/4_5_Failure/TimBrown.jpg" class="silex-element-content"></a></div>
+            <div data-silex-type="image" class="editable-style silex-id-1492534961873-21 image-element" data-silex-id="silex-id-1492534961873-21" style=""><a href="https://player.vimeo.com/video/103471334?title=0&byline=0&portrait=0" target="_blank"><img src="Photos/4_5_Failure/TimBrown.jpg" class="silex-element-content"></a></div>
             <div data-silex-type="image" class="editable-style silex-id-1492528641239-18 image-element" data-silex-id="silex-id-1492528641239-18" style=""><img src="Photos/4_5_Failure/20170405_194244621_iOS.jpg" class="silex-element-content"></div>
             <div data-silex-type="image" class="editable-style silex-id-1492534360979-20 image-element" data-silex-id="silex-id-1492534360979-20" style=""><img src="Photos/4_5_Failure/20170404_193514186_iOS.jpg" class="silex-element-content"></div>
             <div data-silex-type="image" class="editable-style silex-id-1492534353617-19 image-element" data-silex-id="silex-id-1492534353617-19" style=""><img src="Photos/4_5_Failure/20170404_193504246_iOS.jpg" class="silex-element-content"></div>
