--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -898,6 +898,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -1044,9 +1046,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680357240-9" data-silex-id="silex-id-1488680357240-9" style="">
-                <div class="silex-element-content normal">
-                    Week 10:
-
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week10_tri_adapter">                    Week 10:                    </a>
                     <div>
                         <font size="2">Stories/Narrative</font>
                     </div>
@@ -1075,7 +1075,7 @@
                     <font color="#999999">Week 13:
                     </font>
                     <div>
-                        <font size="2" color="#999999">Future Trends</font>
+                        <font color="#999999" size="2">Future Trends</font>
                     </div>
                 </div>
             </div>
@@ -1084,7 +1084,7 @@
                     <font color="#999999">Week 14:
                     </font>
                     <div>
-                        <font size="2" color="#999999">Final Review</font>
+                        <font color="#999999" size="2">Final Review</font>
                     </div>
                 </div>
             </div>
@@ -1666,6 +1666,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
