--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -900,6 +900,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -1075,7 +1077,7 @@
                     <font color="#999999">Week 13:
                     </font>
                     <div>
-                        <font color="#999999" size="2">Future Trends</font>
+                        <font size="2" color="#999999">Future Trends</font>
                     </div>
                 </div>
             </div>
@@ -1084,7 +1086,7 @@
                     <font color="#999999">Week 14:
                     </font>
                     <div>
-                        <font color="#999999" size="2">Final Review</font>
+                        <font size="2" color="#999999">Final Review</font>
                     </div>
                 </div>
             </div>
@@ -1666,6 +1668,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
