--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1048,7 +1048,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680357240-9" data-silex-id="silex-id-1488680357240-9" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week10_tri_adapter">                    Week 10:                    </a>
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week10_tri_adapter" target="_blank">                    Week 10:                    </a>
                     <div>
                         <font size="2">Stories/Narrative</font>
                     </div>
