--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -902,6 +902,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -1064,9 +1066,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680365435-11" data-silex-id="silex-id-1488680365435-11" style="">
-                <div class="silex-element-content normal">
-                    Week 12:
-
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week12_fab">                    Week 12:                    </a>
                     <div>
                         <font size="2">Scalability</font>
                     </div>
@@ -1668,6 +1668,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
