--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1066,7 +1066,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680365435-11" data-silex-id="silex-id-1488680365435-11" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week12_fab">                    Week 12:                    </a>
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week12_fab" target="_blank">                    Week 12:                    </a>
                     <div>
                         <font size="2">Scalability</font>
                     </div>
