--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1084,7 +1084,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680373444-13" data-silex-id="silex-id-1488680373444-13" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/last">                    Week 14:                                        </a>
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/last" target="_blank">                    Week 14:                                        </a>
                     <div>
                         <font size="2">Final Review</font>
                     </div>
