--- a/index.html
+++ b/index.html
@@ -906,6 +906,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -1076,19 +1078,17 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680369372-12" data-silex-id="silex-id-1488680369372-12" style="">
                 <div class="silex-element-content normal">
-                    <font color="#999999">Week 13:
-                    </font>
+                    Week 13:
+
                     <div>
-                        <font size="2" color="#999999">Future Trends</font>
+                        <font size="2">Future Trends</font>
                     </div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1488680373444-13" data-silex-id="silex-id-1488680373444-13" style="">
-                <div class="silex-element-content normal">
-                    <font color="#999999">Week 14:
-                    </font>
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/Last">                    Week 14:                                        </a>
                     <div>
-                        <font size="2" color="#999999">Final Review</font>
+                        <font size="2">Final Review</font>
                     </div>
                 </div>
             </div>
@@ -1670,6 +1670,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
