--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1255,7 +1255,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span>
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1495658079290-1" data-silex-id="silex-id-1495658079290-1" style="">
                 <div class="silex-element-content normal">
                     <h1 class="heading1">
-                        <font size="6">Photos - Student's Presentation for Midterm Review<span style="color: rgb(0, 0, 255);"></span></font><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
+                        <font size="6"><a href="https://jehkim.github.io/howtodesign/week9_midterm_photo_collection.html" target="_blank">Photos - Student's Presentation for Midterm Review</a><span style="color: rgb(0, 0, 255);"></span></font><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
 &quot;Malgun Gothic&quot;;mso-fareast-theme-font:minor-fareast;color:black;mso-ansi-language:
 EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span>
                     </h1>
