--- a/week9_midterm_photo_collection.html
+++ b/week9_midterm_photo_collection.html
@@ -22,7 +22,8 @@
             <img class="mySlides" src="Photos/4_12_MidTerm/class/20170412_215342718_iOS.jpg" style="width:70%"> 
             <img class="mySlides" src="Photos/4_12_MidTerm/class/20170412_220604480_iOS.jpg" style="width:70%"> 
             <img class="mySlides" src="Photos/4_12_MidTerm/class/20170412_220717308_iOS.jpg" style="width:70%"> 
-            <a href="Photos/4_12_MidTerm/class/20170412_203836000_iOS.mov" target="_blank"><img class="mySlides" src="Photos/4_12_MidTerm/class/moviefile.jpg" style="width:70%"></a>
+			<img class="mySlides" src="Photos/4_12_MidTerm/class/moviefile.jpg" style="width:70%">
+            <video controls="controls" width="800" height="600" name="mov1" src="Photos/4_12_MidTerm/class/20170412_203836000_iOS.mov"></video>
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
