--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span>
             <div data-silex-type="image" class="editable-style silex-id-1495658811914-16 image-element" data-silex-id="silex-id-1495658811914-16" style=""><img src="Photos/4_12_MidTerm/class/20170412_220604480_iOS.jpg" class="silex-element-content"></div>
             <div data-silex-type="image" class="editable-style silex-id-1495658801080-15 image-element" data-silex-id="silex-id-1495658801080-15" style=""><img src="Photos/4_12_MidTerm/class/20170412_215342718_iOS.jpg" class="silex-element-content"></div>
             <div data-silex-type="image" class="editable-style silex-id-1495658829294-17 image-element" data-silex-id="silex-id-1495658829294-17" style=""><img src="Photos/4_12_MidTerm/class/20170412_220717308_iOS.jpg" class="silex-element-content"></div>
-            <div data-silex-type="image" class="editable-style silex-id-1495660187757-18 image-element" data-silex-id="silex-id-1495660187757-18" style=""><img src="Photos/4_12_MidTerm/class/moviefile.jpg" class="silex-element-content"></div>
+            <div data-silex-type="image" class="editable-style silex-id-1495660187757-18 image-element" data-silex-id="silex-id-1495660187757-18" style=""><a href="Photos/4_12_MidTerm/class/20170412_203836000_iOS.mp4" target="_blank"><img src="Photos/4_12_MidTerm/class/moviefile.jpg" class="silex-element-content"></a></div>
         </div>
     </div>
 
