--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                         <font size="5">Spring 2017, Wed 2-5pm + Lab <br></font>
                     </p>
                     <p class="normal">
-                        <font size="5">Class Website: <a href="//howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
+                        <font size="5">Class Website: <a href="http://howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
                     </p>
                 </div>
             </div>
@@ -1992,7 +1992,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
                                 <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ" target="_blank">Check it out</a> (video)
                                 <br>
                             </li>
-                            <li>More information on the course - How to Design [Almost] Anything: Check <a href="//howtodesign.mit.edu/" target="_blank">class website</a>
+                            <li>More information on the course - How to Design [Almost] Anything: Check <a href="http://howtodesign.mit.edu/" target="_blank">class website</a>
                                 <br>
                             </li>
                         </ul>
