--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1495723037444-3" data-silex-id="silex-id-1495723037444-3" style="">
                 <div class="silex-element-content normal">
                     <h1 class="heading1">
-                        <a href="https://jehkim.github.io/howtodesign/week12_final_photo_collection.html">
+                        <a href="https://jehkim.github.io/howtodesign/week12_final_photo_collection.html" target="_blank">
                             <font size="6">Final Review - Student's Presentation <span style="color: rgb(0, 0, 255);"></span></font><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
 &quot;Malgun Gothic&quot;;mso-fareast-theme-font:minor-fareast;color:black;mso-ansi-language:
 EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></a>
