--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
                         <font size="5">Spring 2017, Wed 2-5pm + Lab <br></font>
                     </p>
                     <p class="normal">
-                        <font size="5">Class Website: <a href="http://howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
+                        <font size="5">Class Website: <a href="//howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
                     </p>
                 </div>
             </div>
@@ -1636,7 +1636,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
                         <br>
                     </div>
                     <div>
-                        <p class="normal">&nbsp; &nbsp; Guest speaker: <b>Maria C. Yang</b>, MIT Mechanical Dept, Director of MIT Ideation Lab <br></p>
+                        <p class="normal">&nbsp; &nbsp; Guest speaker: <b>Maria C. Yang</b>, MIT Mechanical Dept, Director of <a href="http://ideation.mit.edu/">MIT Ideation Lab</a> <br></p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><br></p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; Maria </span>presented how to process concept development from ideas during the early phase of the design cycle. Multiple steps in creative process - preparation, incubation, illumination and verification.
                             Metrics for creativity are listed below.&nbsp;</p>
