--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -923,11 +923,15 @@
         .silex-id-1487542525806-9 {
             top: 5536px;
             left: 0px;
+            min-width: 980px;
         }
         
         .silex-id-1487542525805-8 {
-            min-height: 511px;
+            min-height: 436px;
             background-color: rgb(255, 255, 255);
+            top: 15px;
+            left: 313px;
+            width: 980px;
         }
         
         .silex-id-1487542550395-10 {
@@ -1026,6 +1030,8 @@
             width: 980px;
         }
     </style>
+
+
 
 
 
@@ -1636,7 +1642,7 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
                         <br>
                     </div>
                     <div>
-                        <p class="normal">&nbsp; &nbsp; Guest speaker: <b>Maria C. Yang</b>, MIT Mechanical Dept, Director of <a href="http://ideation.mit.edu/" target="_blank">MIT Ideation Lab</a> <br></p>
+                        <p class="normal">&nbsp; &nbsp; Guest speaker: <b>Maria C. Yang</b>, MIT Mechanical Dept, Director of <a href="//ideation.mit.edu/" target="_blank">MIT Ideation Lab</a> <br></p>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span><br></p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; Maria </span>presented how to process concept development from ideas during the early phase of the design cycle. Multiple steps in creative process - preparation, incubation, illumination and verification.
                             Metrics for creativity are listed below.&nbsp;</p>
@@ -2043,6 +2049,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
