--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1253,7 +1253,7 @@
                         <font size="5">Spring 2017, Wed 2-5pm + Lab <br></font>
                     </p>
                     <p class="normal">
-                        <font size="5">Class Website: <a href="//howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
+                        <font size="5">Class Website: <a href="http://howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
                     </p>
                 </div>
             </div>
