--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -923,15 +923,11 @@
         .silex-id-1487542525806-9 {
             top: 5536px;
             left: 0px;
-            min-width: 980px;
         }
         
         .silex-id-1487542525805-8 {
-            min-height: 436px;
+            min-height: 511px;
             background-color: rgb(255, 255, 255);
-            top: 15px;
-            left: 313px;
-            width: 980px;
         }
         
         .silex-id-1487542550395-10 {
@@ -1203,6 +1199,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home {
             display: inherit;
@@ -1253,7 +1251,7 @@
                         <font size="5">Spring 2017, Wed 2-5pm + Lab <br></font>
                     </p>
                     <p class="normal">
-                        <font size="5">Class Website: <a href="http://howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
+                        <font size="5">Class Website: <a href="//howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font>
                     </p>
                 </div>
             </div>
@@ -1396,8 +1394,8 @@
                     <h1 class="heading1">
                         <font size="6">My Portfolio</font>
                     </h1>
-                    <p><span>&nbsp;&nbsp;&nbsp; </span>Mid-term Review</p>
-                    <p><span>&nbsp;&nbsp;&nbsp; </span>Final Review<br></p>
+                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Midterm.html"><span>&nbsp;&nbsp;&nbsp; </span>Mid-term Review</a></p>
+                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Final.html"><span>&nbsp;&nbsp;&nbsp; </span>Final Review</a><br></p>
                 </div>
             </div>
         </div>
@@ -2049,6 +2047,8 @@ EN-US;mso-fareast-language:KO;mso-bidi-language:AR-SA"></span></p>
             </div>
         </div>
     </div>
+
+
 
 
 
