--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -1394,8 +1394,8 @@
                     <h1 class="heading1">
                         <font size="6">My Portfolio</font>
                     </h1>
-                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Midterm.html"><span>&nbsp;&nbsp;&nbsp; </span>Mid-term Review</a></p>
-                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Final.html"><span>&nbsp;&nbsp;&nbsp; </span>Final Review</a><br></p>
+                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Midterm.html" target="_blank"><span>&nbsp;&nbsp;&nbsp; </span>Mid-term Review</a></p>
+                    <p><a href="https://jehkim.github.io/howtodesign/MyPF_Final.html" target="_blank"><span>&nbsp;&nbsp;&nbsp; </span>Final Review</a><br></p>
                 </div>
             </div>
         </div>
